syntax = "proto3";

package proto;


enum BalanceType{
    
  RoundRobin   = 0;
  OptimalPerformance  = 1;
}

message PickRequest {
 
}
message PickResponse {

    string ip = 1;
    int32 port = 2;
    uint32 worker_id = 3;
}

service RPCPick {
  
  rpc RPCPick(PickRequest) returns (PickResponse);
}
  